<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DisplayLancPlan" >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+lancplan/textView1"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_txtTrecho" />

            <TextView
                android:id="@+lancplan/txtTrecho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_txtBlank" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+lancplan/textView3"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_txtVeloc" />

            <TextView
                android:id="@+lancplan/txtVeloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_txtBlank" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+lancplan/textView2"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_txtDistAcumul" />

            <TextView
                android:id="@+lancplan/txtDistAcumul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_txtBlank" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_txtApagar"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+lancplan/BtnApagaTudo"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/lbl_btnTudo"
                android:textSize="12sp" />

            <Button
                android:id="@+lancplan/BtnApagaUltima"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/lbl_btnUltimo"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+lancplan/lstView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_lstCalculosSemPassos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+lancplan/editText1"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp" >

            <requestFocus />
        </EditText>

        <CheckBox
            android:id="@+lancplan/CheckBox01"
            android:layout_width="180dp"
            android:layout_height="20sp"
            android:checked="false"
            android:text="@string/lbl_chkVelocMuda"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+lancplan/checkBox1"
            android:layout_width="180dp"
            android:layout_height="20sp"
            android:checked="true"
            android:text="@string/lbl_chkNeutroTrecho"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+lancplan/BtnVeloc"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/lbl_btnVeloc"
                android:textSize="12sp" />

            <Button
                android:id="@+lancplan/BtnDist"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/lbl_btnDist"
                android:textSize="12sp" />

            <Button
                android:id="@+lancplan/BtnTemp"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/lbl_btnTemp"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+lancplan/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn1" />

            <Button
                android:id="@+lancplan/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn2" />

            <Button
                android:id="@+lancplan/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+lancplan/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn4" />

            <Button
                android:id="@+lancplan/button5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn5" />

            <Button
                android:id="@+lancplan/button6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+lancplan/button7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn7" />

            <Button
                android:id="@+lancplan/button8"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn8" />

            <Button
                android:id="@+lancplan/button9"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+lancplan/button_dot"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btnDot" />

            <Button
                android:id="@+lancplan/button0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btn0" />

            <Button
                android:id="@+lancplan/buttonCE"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:text="@string/lbl_btnCE" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <ImageView
                android:id="@+lancplan/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:clickable="true"
                android:src="@drawable/ic_action_name"
                android:contentDescription="@string/descricao" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_btnOmitir" />
        </LinearLayout>

        <Button
            android:id="@+lancplan/BtnOmiteVeloc"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/lbl_btnVeloc"
            android:textSize="12sp" />

        <Button
            android:id="@+lancplan/BtnOmiteDist"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/lbl_btnDist"
            android:textSize="12sp" />

        <Button
            android:id="@+lancplan/BtnOmiteTempo"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:text="@string/lbl_btnTemp"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>